Raise mascot position to prevent clipping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1150,7 +1150,7 @@ a:hover {
 
 .mascot {
     position: fixed;
-    bottom: 48px;
+    bottom: 80px;
     right: 12px;
     width: 53px;
     height: 64px;
